# icecream

./: .env.template  .gitignore  .gitmodules  LICENSE  LICENSE.md  README.md  docker-compose.yml  env.template  pom.xml  requirements.txt
Backend/: .gitignore  Dockerfile  README.md  pom.xml
gateway/: go.mod  (+4 more)
icecream-operation/: .gitignore  pyproject.toml  requirements.txt  settings.py
icecream-operation/.run/: downgrade migration.run.xml  make migration.run.xml  upgrade migration.run.xml
icecream-operation/docker/: compose.yml
icecream-operation/docker/postgresql/: Dockerfile  create-multiple-postgresql-databases.sh
icecream-operation/kafka/: constant.py  main.py  topic.py
icecream-operation/warehouse/db/: session.py
icecream-operation/warehouse/db/cart/: models.py
icecream-operation/warehouse/db/cart/migrations/: env.py
icecream-operation/warehouse/db/cart/migrations/versions/: 3042e04d6ba6_0_create_cart_db.py
icecream-operation/warehouse/db/common/: enumeration.py  session.py
icecream-operation/warehouse/db/customer/: alembic.ini  models.py
icecream-operation/warehouse/db/customer/migrations/: env.py
icecream-operation/warehouse/db/feedback/: models.py
icecream-operation/warehouse/db/feedback/migrations/: env.py
icecream-operation/warehouse/db/inventory/: models.py
icecream-operation/warehouse/db/inventory/migrations/: env.py
icecream-operation/warehouse/db/lookup/: models.py
icecream-operation/warehouse/db/lookup/migrations/: env.py
icecream-operation/warehouse/db/order/: models.py
icecream-operation/warehouse/db/order/migrations/: env.py
icecream-operation/warehouse/db/payment/: models.py
icecream-operation/warehouse/db/payment/migrations/: env.py
icecream-operation/warehouse/db/product/: models.py
icecream-operation/warehouse/db/product/migrations/: env.py
icecream-operation/warehouse/fake/: common.py  crud.py  lookup.py  main.py  order.py  product.py
media/: .editorconfig  .gitignore  pyproject.toml
(+1616 files in other folders)
