[tool.poetry]
name = "icecream-operation"
version = "0.1.0"
description = ""
authors = ["San Dang <dangthaisan@hotmail.com>"]
readme = "README.md"
packages = [{include = "icecream_operation"}]

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "2.0.3"
numpy = "1.25.2"
sqlalchemy = "2.0.20"
psycopg = "3.1.10"
httpx = "0.24.1"
alembic = "1.11.3"
confluent-kafka = "2.2.0"
faker = "19.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
